# 01_backend_systems

./: .env.example  README.md  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
example_data/: sample_data.json
src/: __init__.py  config.py  main.py
src/application/services/: __init__.py  auth_service.py  order_service.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  inventory.py  order.py  organization.py  user.py
src/domain/value_objects/: __init__.py  address.py  email.py  money.py
src/infrastructure/: __init__.py
src/infrastructure/database/: models.py  session.py
src/infrastructure/repositories/: __init__.py  base.py  inventory_repository.py  order_repository.py  user_repository.py
src/presentation/routes/: auth.py  health.py  inventory.py  orders.py  users.py
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_entities.py  test_value_objects.py
